--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "jdare/clank-bundle",
+    "name": "mseshachalam/clank-bundle",
     "type": "symfony-bundle",
     "description": "Symfony ClankBundle",
     "keywords": ["Web Socket Application"],
-    "homepage": "https://github.com/JDare/ClankBundle",
+    "homepage": "https://github.com/mseshachalam/ClankBundle",
     "license": "MIT",
     "authors": [
         {
