--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": ">=2.3.*",
+        "symfony/framework-bundle": "2.3.*",
         "cboden/Ratchet": "0.2.*"
     },
     "autoload": {
