--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "email": "jeremy.d.dare@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": "2.3.*",
